<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meet Up</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="main_screen_descriptor">To use this app you must sign in through Facebook.</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>

    <!-- Dialogs -->
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_message">Please check your network</string>

    
   <!--  Map Screen -->
   
   <!-- Map Screen Menu -->
   <string name="action_friends">Friends</string>
    <string name="action_events">Events</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    
    <!-- Event screen -->
    <string name="event_name_label">Event Name</string>
     <string name="event_description_label">Event Description</string>
     <string name="event_list_of_friends_label">Event List of Friends</string>
    <string name="event_show_on_map">Show on map</string>
    <string name="event_hide_on_map">Hide on map</string>

    <!-- Tracking Bar -->
    <string name="tracking_button_start">Send Location</string>
    <string name="tracking_button_stop">Sending</string>
    <string name="server_sync_button">Server Sync</string>

    <!-- Emojis -->
    <string name="x">❌</string>
    <string name="check_mark">︎✔︎︎</string>
</resources>