<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/event_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_label" />

    <TextView
        android:id="@+id/event_name"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/event_name_label" />

    <TextView
        android:id="@+id/event_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_name_label"
        android:text="@string/event_description_label" />

    <TextView
        android:id="@+id/event_description"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/event_description_label" 
        android:layout_below="@id/event_name_label"
        />

    <TextView
        android:id="@+id/event_list_of_friends_invited_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_description_label"
        android:text="@string/event_list_of_friends_label" />

    <TextView
        android:id="@+id/event_list_of_friends_invited"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_description_label"
        android:layout_toRightOf="@id/event_list_of_friends_invited_label" />

</RelativeLayout>